# deep-object-detect-track

./: .clang-format  .gitignore  .gitmodules  404.html  CMakeLists.txt  README.md  auto_label.py  auto_label.v8.py  aux.py  dataset-process.py  dataset.html  dataset.legacy.html  deploy.html  detect.py  download-pretrian.html  hashmap.json  index.html  infer-track-async.py  infer-track-camera.py  infer-track-deepcamera.py  infer-track.py  infer.py  install.html  install.legacy.html  package.json  pnpm-lock.yaml  query-device.py  requirements.txt  run-trt8_6.sh  test.py  train.html  train.py  yolo.html
app/: infer.cpp
assets/: app.B8OLvljx.js  dataset.legacy.md.CKFXPN3M.js  dataset.legacy.md.CKFXPN3M.lean.js  dataset.md.DYUfuT0h.js  dataset.md.DYUfuT0h.lean.js  dataset_cvat.md.BNLNOLD5.js  dataset_cvat.md.BNLNOLD5.lean.js  deploy.md.D_itEPwm.js  deploy.md.D_itEPwm.lean.js  download-pretrian.md.BGeC_Fpk.js  download-pretrian.md.BGeC_Fpk.lean.js  index.md.D4eceeZP.js  install.legacy.md.C0yuKwPE.js  install.legacy.md.C0yuKwPE.lean.js  install.md.a9NbgxLL.js  install.md.a9NbgxLL.lean.js  style.K2uUFA0b.css  train.md.Cmg2kI4c.js  train.md.Cmg2kI4c.lean.js  yolo.md.pp3krO22.js  yolo.md.pp3krO22.lean.js
configs/: open-images-v7.yaml
dataset/: cvat.html
dlinfer/: __init__.py  process.py
docs/: README.md  dataset.legacy.md  dataset.md  deploy.md  download-pretrian.md  index.md  install.legacy.md  install.md  preliminary.md  train.md  usage.md  yolo.md
include/: backend.hpp  process.hpp
requirements/: requirements-cpu.txt  requirements.train.txt  torch.txt  yolov5.txt
(+86 files in other folders)
